Bug 194376 - [FreeBSD 10.1 RC2 on Hyper-v] In FreeBSD VM, cannot recognize the second IDE disk
Summary: [FreeBSD 10.1 RC2 on Hyper-v] In FreeBSD VM, cannot recognize the second IDE ...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 10.1-BETA2
Hardware: Any Any
: --- Affects Some People
Assignee: Glen Barber
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-15 08:37 UTC by Kylie
Modified: 2015-12-09 10:05 UTC (History)
4 users (show)

See Also:


Attachments
Proposed fix, tested by Microsoft OSTC team (794 bytes, patch)
2014-10-21 15:21 UTC, Wei Hu
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kylie 2014-10-15 08:37:21 UTC
In FreeBSD VM, cannot recognize the second IDE disk. this only happens on FreeBSD 10.1 RC2.

In hyper-v server 2012 R2:
1. Install FreeBSD 10.1 RC2 VM from 
ftp://ftp.freebsd.org/pub/FreeBSD/releases/amd64/amd64/ISO-IMAGES/10.1/FreeBSD-10.1-RC2-amd64-dvd1.iso
2. Add second IDE disk in IDE controller 0
3. ls /dev/da*


dmesg | grep da
Comment 1 Wei Hu 2014-10-21 15:21:35 UTC
Created attachment 148539 [details]
Proposed fix, tested by Microsoft OSTC team
Comment 2 commit-hook freebsd_committer freebsd_triage 2014-10-21 19:36:25 UTC
A commit references this bug:

Author: gjb
Date: Tue Oct 21 19:36:20 UTC 2014
New revision: 273402
URL: https://svnweb.freebsd.org/changeset/base/273402

Log:
  Fix an issue where a FreeBSD virtual machine provisioned in
  the Microsoft Azure service does not recognize the second
  attached disk on the system.

  Submitted by:	kyliel@Microsoft
  Patched by:	weh@Microsoft
  PR:		194376
  MFC after:	3 days
  X-MFC-10.1:	yes, ASAP
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/sys/dev/hyperv/storvsc/hv_storvsc_drv_freebsd.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2014-10-21 21:27:49 UTC
A commit references this bug:

Author: gjb
Date: Tue Oct 21 21:27:14 UTC 2014
New revision: 273429
URL: https://svnweb.freebsd.org/changeset/base/273429

Log:
  MFC r273402:
    Fix an issue where a FreeBSD virtual machine provisioned in
    the Microsoft Azure service does not recognize the second
    attached disk on the system.

  PR:		194376
  Insta-MFC OK:	re (rodrigc)
  Sponsored by:	The FreeBSD Foundation

Changes:
_U  stable/10/
  stable/10/sys/dev/hyperv/storvsc/hv_storvsc_drv_freebsd.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2014-10-21 23:07:58 UTC
A commit references this bug:

Author: gjb
Date: Tue Oct 21 23:07:31 UTC 2014
New revision: 273435
URL: https://svnweb.freebsd.org/changeset/base/273435

Log:
  MFstable10 r273429:
    MFC r273402:
    Fix an issue where a FreeBSD virtual machine provisioned in
    the Microsoft Azure service does not recognize the second
    attached disk on the system.

  PR:		194376
  Approved by:	re (delphij)
  Sponsored by:	The FreeBSD Foundation

Changes:
_U  releng/10.1/
  releng/10.1/sys/dev/hyperv/storvsc/hv_storvsc_drv_freebsd.c
Comment 5 Kylie 2014-10-22 00:35:41 UTC
Thank you for taking it for 10.x and head.
Comment 6 Glen Barber freebsd_committer freebsd_triage 2014-10-22 00:36:54 UTC
Thank you for the report and the patch!