MFstable10 r273429:   MFC r273402:   Fix an issue where a FreeBSD virtual machine provisioned in   the Microsoft Azure service does not recognize the second   attached disk on the system.

PR:		194376
Approved by:	re (delphij)
Sponsored by:	The FreeBSD Foundation

Former-commit-id: 53137c73911b3b6b2ecbb2409c79d66aa26a4f25